# spc

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
src/spc/: spc.py  sub.py
tests/: test_spc.py
