[build-system]
requires = ["setuptools >= 64.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spc"
version = "0.4.1"
dependencies = [
    "numpy",
]
requires-python = ">=3.8"
authors = [
  {name = "Rohan Isaac", email = "rohan_isaac@yahoo.com"},
]
description = "Module for reading, exploring and converting *.spc spectroscopic binary data in Python."
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 only (GPLv3)",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
