[build-system]
requires = ["setuptools >= 64.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spc"
version = "0.4.1"
dependencies = [
    "numpy",
]
requires-python = ">=3.8"
authors = [
    { name = "Rohan Isaac", email = "rohan_isaac@yahoo.com" },
    { name = "Michael Adams", email = "github@mmmad.de" }
]
description = "Module for reading, exploring and converting *.spc spectroscopic binary data in Python."

[project.optional-dependencies]
dev = ["pytest"]
plot = ["matplotlib"]

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
python_functions = "test_*"
testpaths = "tests"
